# WarsawMarathonAnalysis

./: LICENSE  README.md  marathon.cabal
app/: Main.hs  display.py
data/: marathon_data.html
src/: Lib.hs
