name:                marathon
version:             0.1.0.0
synopsis:            Parsing tool for spreadsheet data
description:         Please see README.md
homepage:            http://github.com/gregorias/marathon#readme
license:             BSD3
license-file:        LICENSE
author:              Grzegorz Milka
maintainer:          grzegorzmilka@gmail.com
copyright:           Copyright: (c) 2016 Grzegorz Milka
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , attoparsec
  default-language:    Haskell2010

executable marathon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marathon
                     , bytestring
  default-language:    Haskell2010

test-suite marathon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marathon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
